--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sliding Carousel</title>
+  <title>Seamless Loop Carousel</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -13,11 +13,12 @@
     </button>
     <div class="carousel">
       <div class="carousel-track">
-        <img src="Image1.png" class="carousel-image" alt="Image1" />
+        <img src="Image1.gif" class="carousel-image" alt="Image1" />
         <img src="Image2.gif" class="carousel-image" alt="Image2" />
-        <img src="Image3.png" class="carousel-image" alt="Image3" />
+        <img src="Image3.gif" class="carousel-image" alt="Image3" />
         <img src="Image4.gif" class="carousel-image" alt="Image4" />
-        <img src="Image5.png" class="carousel-image" alt="Image5" />
+        <img src="Image5.gif" class="carousel-image" alt="Image5" />
+        <img src="Image1.gif" class="carousel-image clone" alt="CloneStart" />
       </div>
     </div>
     <button class="nav-button right" id="nextBtn">
